<resources>
    <string name="app_name">ToDoList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_note">Add note</string>
    <string name="title">Title</string>
    <string name="note_text">Note text</string>
    <string name="your_note">Your note</string>
    <string name="update">Update note</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="delete_note">Delete note</string>
    <string name="share">Share</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
</resources>