<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/undo"
        android:enabled="false"
        android:icon="@drawable/undo_icon"
        android:title="@string/undo"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/redo"
        android:enabled="false"
        android:icon="@drawable/redo_icon"
        android:title="@string/redo"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/done"
        android:icon="@drawable/done_icon"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/top_app_bar_menu_delete"
        android:title="@string/delete_note"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/share_icon"
        android:title="@string/share"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>